fix: change z-index of Maps Error Message

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -158,6 +158,7 @@ input {
    min-height: 848px;
    position: absolute;
    right: 0px;
+   z-index: -1;
  }
 
  #mapError.true {
